test/files/neg/implicit-any2stringadd-warning.scala
// scalac: -Xfatal-warnings -deprecation
//
object Test {
  true + "what"
}
